--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,7 @@ name: Gateway deploy
 on:
   push:
     branches: ["main"]
+
   workflow_dispatch:
 
 jobs:
@@ -12,31 +13,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Detect package manager
-        id: detect-package-manager
-        run: |
-          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
-            echo "manager=yarn" >> $GITHUB_ENV
-            echo "command=install" >> $GITHUB_ENV
-            echo "runner=yarn" >> $GITHUB_ENV
-            exit 0
-          elif [ -f "${{ github.workspace }}/package.json" ]; then
-            echo "manager=npm" >> $GITHUB_ENV
-            echo "command=ci" >> $GITHUB_ENV
-            echo "runner=npx --no-install" >> $GITHUB_ENV
-            exit 0
-          else
-            echo "Unable to determine package manager" >&2
-            exit 1
-          fi
-
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: "20"
 
       - name: Install dependencies
-        run: ${{ env.runner }} ${{ env.command }}
+        run: npm install
 
       - name: "auth"
         uses: "google-github-actions/auth@v2"
