--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,8 @@
 runtime: nodejs20
 env: standard
+env_variables:
+  NODE_ENV: "production"
+  AUTH_SERVICE_URL: $ALLOWED_ORIGINS
+  PORT: $PORT
 automatic_scaling:
   max_instances: 2
