--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
         env:
           NODE_ENV: "production"
           AUTH_SERVICE_URL: ${{ secrets.AUTH_SERVICE_URL }}
-          AUTH_SERVICE_PORT: ${{ secrets.AUTH_SERVICE_PORT }}
+          PORT: ${{ secrets.AUTH_SERVICE_PORT }}
 
       - name: Deploy to Google App Engine
         run: gcloud config set project aionion-411022 && gcloud app deploy app.yaml --version=gatewayv1
