--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gateway-v1",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "npx tsc",
     "start": "export NODE_ENV=production && node dist/index.js",
