--- a/package.json
+++ b/package.json
@@ -4,14 +4,10 @@
   "description": "",
   "main": "./dist/server.js",
   "scripts": {
-    "prepare": "npm run gcp-build",
-    "pretest": "npm run gcp-build",
-    "build": "tsc -p .",
-    "start": "node ./dist/server.js",
+    "build": "npx tsc",
+    "start": "export NODE_ENV=production && node ./dist/server.js",
     "dev": "export NODE_ENV=development && nodemon src/server.ts",
-    "compile": "tsc -p .",
-    "gcp-build": "tsc -p .",
-    "deploy": "gcloud app deploy"
+    "deploy": "gcloud config set project aionion-411022 && gcloud app deploy app.yaml --version=gatewayv1"
   },
   "keywords": [],
   "author": "",
