--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npx tsc",
     "start": "export NODE_ENV=production && node ./dist/server.js",
     "dev": "export NODE_ENV=development && nodemon src/server.ts",
-    "deploy": "gcloud config set project aionion-411022 && gcloud app deploy app.yaml --version=gatewayv1"
+    "deploy": "gcloud app deploy app.yaml --version=authv1"
   },
   "keywords": [],
   "author": "",
