--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
   "scripts": {
     "build": "npx tsc",
     "start": "export NODE_ENV=production && node ./dist/server.js",
-    "dev": "export NODE_ENV=development && nodemon src/server.ts",
+    "dev": "export NODE_ENV=production && nodemon src/server.ts",
     "deploy": "gcloud app deploy app.yaml --version=gatewayv1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
-    "zod": "^3.22.4",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
